
Version 1.1.1

    - Implemented `--blockCacheWriteDelay' and `--blockCacheTimeout' flags.
    - Implemented read-ahead using `--readAhead' and `--readAheadTrigger' flags.
    - Added new `--test' flag which turns on local test mode.
    - Fixed bug where an error during auto-detection would cause a segfault.
    - Fixed bug where read errors from the underlying store were being ignored
      by the block cache layer.

Version 1.1.0 (r150) released 26 July 2008

    - Added a block cache with parallel writes which vastly improves performance.
    - Added a new `stats' file to the filesystem containing various statistics.
    - Added `--noAutoDetect' flag to disable auto-detection at startup.
    - Fixed a few small race conditions and memory leaks.
    - Return zeroes for unwritten blocks with `assumeEmpty'.

Version 1.0.5 (r111) released 15 July 2008

    - Avoid reuse of CURL instance after receiving any HTTP error (issue #3)
    - On MacOS, prevent kernel timeouts prior to our own timeout (issue #2)
    - Replaced `--connectTimeout' and `--ioTimeout' with `--timeout' because
      CURL's I/O timeout includes in it the connection time as well.

Version 1.0.4 (r82) released 9 July 2008

    - Retry on all HTTP error codes, not just 500 or greater. Tests show that
      a valid request can return a 4xx response due to network issues.
    - Added `--fileMode' and `--readOnly' flags.
    - Added `--assumeEmpty' flag.
    - Support 'E' for 'exabytes'.
    - Port to Mac OS (issue #1)

Version 1.0.3 (r39) released 30 June 2008

    - Implement exponential backoff: replace ``--maxRetry'' and ``--retryPause''
      with ``--initialRetryPause'' and ``--maxRetryPause''.
    - Fix `--accessType' flag which was not being properly handled.
    - Improvements to the man page.

Version 1.0.2 (r25) released 20 June 2008

    - Fix bug in setting User-Agent HTTP header.
    - Fix glitch in man page.

Version 1.0.1 (r18) released 20 June 2008
